--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 lang: ja-JP
+permalink: /:year/:month/:day/:title
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
