--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ paginate_path: "/posts/page:num/"
 exclude:
   - README.md
   - create_new_article.sh
+  - serve.sh
   - Gemfile
   - Gemfile.lock
   - node_modules
