--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ paginate_path: "/posts/page:num/"
 exclude:
   - README.md
   - create_new_article.sh
-  - serve.sh
+  - docker-comose.yml
   - Gemfile
   - Gemfile.lock
   - node_modules
