--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,7 @@ exclude:
   - README.md
   - create_new_article.sh
   - docker-comose.yml
+  - _config.docker.yml
   - Gemfile
   - Gemfile.lock
   - node_modules
